All links added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li><i class="fab fa-node-js nodejs"></i>&nbsp;Node.js</li>
             <li><i class="fas fa-database mongodb"></i>&nbsp;MongoDB</li>
           </ul>
-          <a href="#" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
+          <a href="https://tanatravelguides.herokuapp.com/" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
           <a href="https://github.com/Scarecrowsama/travelsite" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-code"></i></span>&nbsp;View Code</a>
   
         </div>
@@ -112,7 +112,7 @@
             <li><i class="fas fa-arrow-circle-right arrow"></i>&nbsp;Flexbox</li>
             <li><i class="fas fa-arrow-circle-right arrow"></i>&nbsp;Responsive</li>
           </ul>
-          <a href="#" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
+          <a href="https://tanapersonalsite.herokuapp.com/" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
           <a href="https://github.com/Scarecrowsama/personalsite" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-code"></i></span>&nbsp;View Code</a>
 
         </div>
