Small fix to resume download

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="mailto:tanausu_sa@hotmail.com" class="cta-btn cta-btn__email"><span><i class="fas fa-at"></i></span>&nbsp;Email me</a>
           <a href="tel:+44-07-596472471" class="cta-btn cta-btn__phone"><span><i class="fas fa-mobile-alt"></i></span>&nbsp;Call me</a>
           <a href="public/files/resume.pdf" class="cta-btn cta-btn__resume"><span><i class="fas fa-file-download"></i></span>&nbsp;Resume</a>
-          <a href="#portfolio" class="cta-btn cta-btn__portfolio"><span><i class="fas fa-code"></i></span>&nbsp;Portfolio</a>
+          <a href="#portfolio" class="cta-btn cta-btn__portfolio" target="_blank"><span><i class="fas fa-code"></i></span>&nbsp;Portfolio</a>
           </div>
       </section>
     
