Refactoring css, created abstracts folder and files with mixins, variables and helpers, moved code from other files there, also deleted typography file

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <li><i class="fas fa-arrow-circle-right arrow"></i>&nbsp;Flexbox</li>
             <li><i class="fas fa-arrow-circle-right arrow"></i>&nbsp;Responsive</li>
           </ul>
-          <a href="https://tanasosa.com/" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
+          <a href="http://tanasosa.com/" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-external-link-alt"></i></span>&nbsp;View Demo</a>
           <a href="https://github.com/Scarecrowsama/personalsite" target="_blank" class="card__btn"><span class="card__btn-icon"><i class="fas fa-code"></i></span>&nbsp;View Code</a>
 
         </div>
