Portfolio link no longes has a blank target

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Tanausu Sosa Aleman">
-  <meta name="keywords" content="tanausu sosa, web developer, web design, cogind, programming, london, html5, css3, javascript, node.js, css grid, flexbox, mysql, mongodb, frontend, backend">
+  <meta name="keywords" content="tanausu sosa, web developer, web design, coding, programming, london, html5, css3, javascript, node.js, css grid, flexbox, mysql, mongodb, frontend, backend, react.js">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Tanausu Sosa Aleman &#124; Web Developer &#124; London </title>
@@ -53,7 +53,7 @@
           <a href="mailto:tanausu_sa@hotmail.com" class="cta-btn cta-btn__email"><span><i class="fas fa-at"></i></span>&nbsp;Email me</a>
           <a href="tel:+44-07-596472471" class="cta-btn cta-btn__phone"><span><i class="fas fa-mobile-alt"></i></span>&nbsp;Call me</a>
           <a href="public/files/resume.pdf" class="cta-btn cta-btn__resume"><span><i class="fas fa-file-download"></i></span>&nbsp;Resume</a>
-          <a href="#portfolio" class="cta-btn cta-btn__portfolio" target="_blank"><span><i class="fas fa-code"></i></span>&nbsp;Portfolio</a>
+          <a href="#portfolio" class="cta-btn cta-btn__portfolio"><span><i class="fas fa-code"></i></span>&nbsp;Portfolio</a>
           </div>
       </section>
     
